<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/openAs"
        android:title="@string/open_as"
        android:icon="@drawable/ic_cab_openas" />
    <item
        android:id="@+id/copy"
        android:title="@string/copy"
        android:icon="@drawable/ic_cab_copy" />
    <item
        android:id="@+id/move"
        android:title="@string/move"
        android:icon="@drawable/ic_cab_cut" />
    <item
        android:id="@+id/rename"
        android:title="@string/rename"
        android:icon="@drawable/ic_cab_rename" />
    <item
        android:id="@+id/share"
        android:title="@string/share"
        android:icon="@drawable/ic_share" />
    <item
        android:id="@+id/archive"
        android:title="@string/archive"
        android:icon="@drawable/ic_cab_archive" />
    <item
        android:id="@+id/delete"
        android:title="@string/delete"
        android:icon="@drawable/ic_cab_delete" />
    <item
        android:id="@+id/details"
        android:title="@string/details"
        android:icon="@drawable/ic_cab_info" />

</menu>