<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/delete"
        android:title="@string/delete"
        android:icon="@drawable/ic_cab_delete"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/share"
        android:title="@string/share"
        android:icon="@drawable/ic_share"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/copy"
        android:title="@string/copy"
        android:icon="@drawable/ic_cab_copy"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/move"
        android:title="@string/move"
        android:icon="@drawable/ic_cab_cut"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/goUp"
        android:title="@string/go_up"
        android:icon="@drawable/ic_cab_goup"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/selectAll"
        android:title="@string/selectAll"
        android:icon="@drawable/ic_cab_selectall"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/bookmark"
        android:title="@string/bookmark"
        android:icon="@drawable/ic_cab_pin"
        app:showAsAction="never" />
    <item
        android:id="@+id/archive"
        android:title="@string/archive"
        android:icon="@drawable/ic_cab_archive"
        app:showAsAction="never" />

</menu>