<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:ignore="UnusedAttribute">

    <TextView
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-light"
        android:gravity="start"
        android:lineSpacingMultiplier="1.2"
        android:linksClickable="true"
        android:textAlignment="viewStart"
        android:textColor="?android:textColorPrimary"
        android:textIsSelectable="false"
        android:textSize="16sp" />

    <GridLayout
        android:id="@+id/permissionsGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="3"
        android:visibility="gone">

        <TextView
            android:id="@+id/owner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/owner"
            android:textColor="?android:textColorPrimary"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <com.afollestad.cabinet.views.DynamicCheckBox
                android:id="@+id/ownerR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/r"
                android:textSize="16sp" />

            <com.afollestad.cabinet.views.DynamicCheckBox
                android:id="@+id/ownerW"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/w"
                android:textSize="16sp" />

            <com.afollestad.cabinet.views.DynamicCheckBox
                android:id="@+id/ownerX"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/x"
                android:textSize="16sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="16dp"
            android:text="@string/group"
            android:textColor="?android:textColorPrimary"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <com.afollestad.cabinet.views.DynamicCheckBox
                android:id="@+id/groupR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/r"
                android:textSize="16sp" />

            <com.afollestad.cabinet.views.DynamicCheckBox
                android:id="@+id/groupW"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/w"
                android:textSize="16sp" />

            <com.afollestad.cabinet.views.DynamicCheckBox
                android:id="@+id/groupX"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/x"
                android:textSize="16sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="16dp"
            android:text="@string/other"
            android:textColor="?android:textColorPrimary"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <com.afollestad.cabinet.views.DynamicCheckBox
                android:id="@+id/otherR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/r"
                android:textSize="16sp" />

            <com.afollestad.cabinet.views.DynamicCheckBox
                android:id="@+id/otherW"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/w"
                android:textSize="16sp" />

            <com.afollestad.cabinet.views.DynamicCheckBox
                android:id="@+id/otherX"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/x"
                android:textSize="16sp" />

        </LinearLayout>

    </GridLayout>

</LinearLayout>